[tool.poetry]
name = "day-19"
version = "0.1.0"
description = ""
authors = ["Lee Jonghyuk <jhlee@superb-ai.com>"]
readme = "README.md"
packages = [{include = "day_19"}]

[tool.poetry.dependencies]
python = "^3.9"
ortools = "^9.5.2237"
flake8 = "^6.0.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
